webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webapp-dev-svc
  namespace: webapp-dev
spec:
  ingressClassName: nginx
  rules:
  - host: webapp-dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-dev-svc
            port:
              number: 8090
